# plebiscite

./: LICENSE  Main.hs  README.md  plebiscite.cabal  shell.nix  stack.yaml
Election/: Condorcet.hs
